--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@
     background-color: rgb(29 78 216 / var(--tw-bg-opacity)) !important;
 }
 
-#image-container {
+#nav {
     position: relative;
     display: inline-block;
 }
