--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,15 @@
+.video-container {
+    position: relative;
+}
+
+.overlay-map {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10;
+    display: none;
+}
+
 .btn-active {
     --tw-ring-opacity: 1;
     --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity));
